--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MovieStudyApp</string>
+    <string name="trending">Trending</string>
+    <string name="story">Story</string>
+    <string name="cast">Cast</string>
 </resources>
