--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
     <string name="trending">트랜드</string>
     <string name="story">스토리</string>
     <string name="cast">출연</string>
-    <string name="genre_recommendation">장르 추천</string>
+    <string name="recommendation_movie">추천 영화</string>
     <string name="home">홈</string>
     <string name="search">검색</string>
     <string name="my_page">마이페이지</string>
     <string name="settings">설정</string>
+    <string name="error_api_call">API 호출 중 오류가 발생하였습니다.\n다시 시도해주세요</string>
+    <string name="refresh">새로고침</string>
 </resources>
