--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="my_average">내 별점</string>
     <string name="memo_guide">간단한 메모를 입력해주세요</string>
     <string name="ok">확인</string>
+    <string name="cancel">취소</string>
     <string name="like_register">좋아요 등록</string>
 </resources>
