--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="ok">확인</string>
     <string name="cancel">취소</string>
     <string name="like_register">좋아요 등록</string>
+    <string name="empty_like_movie">등록한 좋아요 영화가 없어요!</string>
+    <string name="empty_bookmark">등록한 북마크 영화가 없어요!</string>
 </resources>
